[package]
name = "graph-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rusqlite = "0.37"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
petgraph = "0.8"
indexmap = "2.11"